--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
 body{
-    background:#acacec;
+    background:#f9f7fe;
+    font-family: "Roboto",sans-serif, monospace;
+}
+.weather-app{
+    background: white;
+    max-width: 600px;
+    margin:45px auto;
+    border-radius: 16px;
+    padding: 30px;
 }
