--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,84 @@ body{
     background:#f9f7fe;
     font-family: "Roboto",sans-serif, monospace;
 }
+a{
+    color:blueviolet ;
+}
 .weather-app{
     background: white;
     max-width: 600px;
     margin:45px auto;
     border-radius: 16px;
+    box-shadow:0 30px 50px rgba(65, 50, 100, 0.08);
     padding: 30px;
+}
+
+header{
+    border-bottom: 1px solid #f9f7fe;
+    padding: 0 0 30px 0;
+}
+
+.search-form-input{
+    background: #f9f7fe;
+    border:none;
+    border-radius:6px;
+    width: 80%;
+    font-size: 16px;
+    padding:15px 20px;
+
+}
+.search-form-button{
+    background: blueviolet;
+    border:none;
+    margin-left: 5px;
+    font-size: 16px;
+    padding:15px 25px;
+    border-radius: 6px;
+    color:white;
+}
+main {
+    padding:30px 0;
+}
+
+
+.weather-app-city {
+    margin:0;
+    font-size: 38px;
+    line-height: 48px;
+}
+.weather-app-details{
+    font-size: 16px;
+    color:rgba(39,33,66,0.4);
+    line-height: 20px;
+    font-weight: 500;
+}
+.weather-app-details strong{
+    color:rgb(233, 127, 144);
+}
+.weather-app-data {
+    display:flex;
+    justify-content: space-between;
+}
+.weather-app-temperature-container{
+    display: flex;
+}
+.weather-app-temperature{
+    font-size:88px;
+    font-weight:bold;
+}
+.weather-app-icon{
+    font-size: 44px;
+    margin-top: 22px;
+    margin-left:10px ;
+}
+.weather-app-unit{
+    margin-top: 16px;
+    font-size:28px
+}
+footer{
+    border-top:1px solid #f9f7fe;
+    padding:30px 0 0 0;
+    text-align: center;
+    font-size:13px;
+    color:rgba(0, 0, 0, 0.6);
 }
