--- a/src/styles.css
+++ b/src/styles.css
@@ -63,17 +63,19 @@ main {
 .weather-app-temperature-container{
     display: flex;
 }
+.weather-app-icon{
+    width: 88px;
+    height: 88px;
+}
 .weather-app-temperature{
     font-size:88px;
     font-weight:bold;
+    line-height: 88px;
+    font-weight: bold;
 }
-.weather-app-icon{
-    font-size: 44px;
-    margin-top: 22px;
-    margin-left:10px ;
-}
+
 .weather-app-unit{
-    margin-top: 16px;
+    margin-top: 10px;
     font-size:28px
 }
 footer{
