--- a/src/styles.css
+++ b/src/styles.css
@@ -78,6 +78,22 @@ main {
     margin-top: 10px;
     font-size:28px
 }
+.weather-forecast{
+    margin: top 20px;
+    
+}
+.weather-forecast-date{
+    font-size:16px;
+    color:rgba(39, 33, 66, 0.4);
+    opacity: 0.6;
+}
+div{
+    display: block;
+}
+.weather-forecast-temperature-min{
+    opacity: 0.6;
+}
+
 footer{
     border-top:1px solid #f9f7fe;
     padding:30px 0 0 0;
