--- a/src/styles.css
+++ b/src/styles.css
@@ -88,13 +88,13 @@ main {
 }
 
 .weather-forecast {
-    position: flex;
+    display: flex;
     justify-content: space-around;
     margin-top: 30px;
 
 }
 .forecast{
-    position: flex;
+    display: flex;
     justify-content: space-around;
     margin-top: 30px;
 }
